code style change